egressgateway-originate-tls/yaml/basic-gateway-configuration.yaml
---
# Source: basic-gateway-configuration/templates/gateway-default.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: default
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "api-istio-system.apps.cluster-a57a.a57a.sandbox1041.opentlc.com"
...
---
# Source: basic-gateway-configuration/templates/virtualservice-bookinfo.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
  namespace: bookinfo
spec:
  gateways:
  - istio-system/default
  hosts:
  - api-istio-system.apps.cluster-a57a.a57a.sandbox1041.opentlc.com
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        port:
          number: 9080
...
